# dip-nd-benchmark

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cuda.cu  main.cpp  main.hpp  main.py  pyproject.toml  run.sh  sycl.cpp  utils.hpp  visiongl.cpp
assets/mitosis/: mitosis-5d0000.tif  mitosis-5d0001.tif  mitosis-5d0002.tif  mitosis-5d0003.tif  mitosis-5d0004.tif  mitosis-5d0005.tif  mitosis-5d0006.tif  mitosis-5d0007.tif  mitosis-5d0008.tif  mitosis-5d0009.tif  mitosis-5d0010.tif  mitosis-5d0011.tif  mitosis-5d0012.tif  mitosis-5d0013.tif  mitosis-5d0014.tif  mitosis-5d0015.tif  mitosis-5d0016.tif  mitosis-5d0017.tif  mitosis-5d0018.tif  mitosis-5d0019.tif  mitosis-5d0020.tif  mitosis-5d0021.tif  mitosis-5d0022.tif  mitosis-5d0023.tif  mitosis-5d0024.tif  mitosis-5d0025.tif  mitosis-5d0026.tif  mitosis-5d0027.tif  mitosis-5d0028.tif  mitosis-5d0029.tif  mitosis-5d0030.tif  mitosis-5d0031.tif  mitosis-5d0032.tif  mitosis-5d0033.tif  mitosis-5d0034.tif  mitosis-5d0035.tif  mitosis-5d0036.tif  mitosis-5d0037.tif  mitosis-5d0038.tif  mitosis-5d0039.tif  (+296 more)
cuda/: CMakeLists.txt  run.sh
cuda/src/: benchmark.cu
matlab/: BenchmarkBuilder.m  benchmark.m  run.sh
shared/include/: utils.hpp
shared/src/: main.cpp  utils.cpp
src/_shared/: main.cpp  utils.hpp
src/_shared/src/: main.cpp
src/cuda/: CMakeLists.txt  benchmark.cu
src/cuda/src/: benchmark.cu
src/sycl/: CMakeLists.txt  benchmark.cpp
src/sycl/src/: benchmark.cpp
src/visiongl/: CMakeLists.txt  benchmark.cpp
src/visiongl/src/: benchmark.cpp
sycl/: CMakeLists.txt  run.sh
sycl/src/: benchmark.cpp
visiongl/: CMakeLists.txt  run.sh
visiongl/src/: benchmark.cpp
