cmake_minimum_required(VERSION 3.25)

project(benchmark LANGUAGES CXX)

set(SHARED_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/../shared/include)
set(SHARED_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../shared/src/main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../shared/include/utils.hpp)
set(SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/benchmark.cu)

if(CMAKE_CXX_COMPILER MATCHES "acpp")
    set_source_files_properties(${SOURCE} PROPERTIES LANGUAGE CXX)
    find_package(visiongl CONFIG REQUIRED)
    add_executable(${PROJECT_NAME} ${SOURCE} ${SHARED_SOURCES})
    target_link_libraries(${PROJECT_NAME} PRIVATE visiongl::visiongl)
    target_compile_options(${PROJECT_NAME} PRIVATE --acpp-pcuda --acpp-pcuda-chevron-launch)
    set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
    target_include_directories(${PROJECT_NAME} PRIVATE ${SHARED_INCLUDE})
elseif(CMAKE_CUDA_COMPILER MATCHES "nvcc")
    enable_language(CUDA)
    find_package(visiongl CONFIG REQUIRED)
    add_executable(${PROJECT_NAME} ${SOURCE} ${SHARED_SOURCES})
    set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES native)
    target_link_libraries(${PROJECT_NAME} PRIVATE visiongl::visiongl)
    set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
    target_include_directories(${PROJECT_NAME} PRIVATE ${SHARED_INCLUDE})
endif()
