set(SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/benchmark.cu)

if(CMAKE_CXX_COMPILER MATCHES "acpp")
    find_package(visiongl CONFIG REQUIRED)
    set_source_files_properties(${SOURCE} PROPERTIES LANGUAGE CXX)
    add_executable(benchmark_pcuda ${SOURCE} ${SHARED_SOURCES})
    target_compile_options(benchmark_pcuda PRIVATE --acpp-pcuda --acpp-pcuda-chevron-launch)
    target_link_libraries(benchmark_pcuda PRIVATE visiongl::visiongl)
elseif(CMAKE_CUDA_COMPILER MATCHES "nvcc")
    enable_language(CUDA)
    find_package(visiongl CONFIG REQUIRED)
    add_executable(benchmark_cuda ${SOURCE} ${SHARED_SOURCES})
    set_target_properties(benchmark_cuda PROPERTIES CUDA_ARCHITECTURES native)
    target_link_libraries(benchmark_cuda PRIVATE visiongl::visiongl)
endif()
